--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: PPtreeViz
 Version: 1.0.0
-Date: 2015-3-5
+Date: 2015-3-25
 Title: Exploring of Projection pursuit tree 
 Author: Eun-Kyung Lee
-Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
+Maintainer: Eun-Kyung Lee <lee.eunk@ewha.ac.kr>
 Imports:
     MASS (>= 3.1-20),
-    Rcpp,
-    RcppArmadillo
+    Rcpp
 Description: Projection pursuit classification and regression tree using LDA,
     Lr or PDA projection pursuit index
 LinkingTo: Rcpp, RcppArmadillo
 License: GPL (>= 2)
 Depends: R (>= 2.10),
-         ggplot2, grid
+         gridExtra,ggplot2,grid
