--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,13 @@
 Package: PPtreeViz
-Version: 1.0.0
-Date: 2015-3-25
-Title: Exploring of Projection pursuit tree 
-Author: Eun-Kyung Lee
-Maintainer: Eun-Kyung Lee <lee.eunk@ewha.ac.kr>
-Imports:
-    MASS (>= 3.1-20),
-    Rcpp
+Title: All about theprojection pursuit classification and regression tree 
 Description: Projection pursuit classification and regression tree using LDA,
-    Lr or PDA projection pursuit index
+    Lr or PDA projection pursuit index.
+Version: 1.0.0
+Author: Eun-Kyung Lee <lee.eunk@gmail.com>
+Maintainer: Eun-Kyung Lee <lee.eunk@ewha.ac.kr>
+Date: 2015-3-25
+Depends: R (>= 2.10),gridExtra,ggplot2,grid
+Imports: MASS (>= 3.1-20),Rcpp 
 LinkingTo: Rcpp, RcppArmadillo
 License: GPL (>= 2)
-Depends: R (>= 2.10),
-         gridExtra,ggplot2,grid
+
