--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
 Date: 2015-5-5
 Depends: R (>= 2.10),gridExtra,ggplot2,grid 
 Suggests: MASS (>= 3.1-20)
-Imports: Rcpp
+Imports: Rcpp, reshape2
 LinkingTo: Rcpp, RcppArmadillo
 License: GPL (>= 2)
 
