--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,6 @@ export(PPopt.Viz)
 import(ggplot2)
 import(grid)
 import(gridExtra)
+import(reshape2)
 importFrom(Rcpp,evalCpp)
 useDynLib(PPtreeViz)
