--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,9 @@ Version: 1.2.0
 Author: Eun-Kyung Lee 
 Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
 Date: 2015-8-12
-Depends: R (>= 2.10),gridExtra,ggplot2
+Depends: R (>= 2.10),gridExtra, ggplot2
 Suggests: MASS (>= 3.1-20)
-Imports: Rcpp, reshape2, stats
+Imports: Rcpp,stats
 LinkingTo: Rcpp, RcppArmadillo
 License: GPL (>= 2)
 
