--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
 Package: PPtreeViz
 Title: Projection Pursuit Classification Tree Visualization
-Description: Tools for exploring projection pursuit classification tree using 
-        various projection pursuit indices.
+Description: Tools for exploring projection pursuit classification tree using
+    various projection pursuit indices.
 Version: 1.4.0
 Author: Eun-Kyung Lee
 Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
 Date: 2016-2-11
-Depends: R (>= 2.10),gridExtra, ggplot2
-Suggests: MASS (>= 3.1-20),stats
-Imports: Rcpp
+Depends:
+    R (>= 2.10),gridExtra,
+    ggplot2,partykit
+Suggests:
+    MASS (>= 3.1-20),stats
+Imports:
+    Rcpp
 LinkingTo: Rcpp, RcppArmadillo
 License: GPL (>= 2)
-
+RoxygenNote: 5.0.1
