--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,14 @@ Package: PPtreeViz
 Title: Projection Pursuit Classification Tree Visualization
 Description: Tools for exploring projection pursuit classification tree using
     various projection pursuit indexes.
-Version: 2.0.0
+Version: 2.0.1
 Author: Eun-Kyung Lee
 Maintainer: Eun-Kyung Lee <lee.eunk@gmail.com>
-Date: 2016-11-25
+Date: 2016-12-19
 Depends:
-    R (>= 2.10),gridExtra,
-    ggplot2,partykit
+    R (>= 2.10), gridExtra, ggplot2, partykit
 Suggests:
-    MASS (>= 3.1-20),stats
+    MASS (>= 3.1-20), stats
 Imports:
     Rcpp
 LinkingTo: Rcpp, RcppArmadillo
